--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.1/react.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.1/JSXTransformer.js"></script>
 
-<script type="text/jsx;harmony=true" src="/js/components/Row.js"></script>
+	<script type="text/jsx;harmony=true" src="/js/components/App.js"></script>
+	<script type="text/jsx;harmony=true" src="/js/components/Row.js"></script>
 	<script type="text/jsx;harmony=true" src="/js/components/Cell.js"></script>
 	<script type="text/jsx;harmony=true" src="/js/components/Board.js"></script>
 </body>
