--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
 	<div id="app"></div>
 
 <script type="text/javascript" src="/js/transpose.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.1/react.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.1/react.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.1/JSXTransformer.js"></script>
 
+
+    <script type="text/jsx;harmony=true" src="/js/script.js"></script>
+    <script type="text/jsx;harmony=true" src="/js/components/User.js"></script>
+    <script type="text/jsx;harmony=true" src="/js/components/UserList.js"></script>
+    <script type="text/jsx;harmony=true" src="/js/components/Row.js"></script>
+    <script type="text/jsx;harmony=true" src="/js/components/Cell.js"></script>
+    <script type="text/jsx;harmony=true" src="/js/components/Board.js"></script>
 	<script type="text/jsx;harmony=true" src="/js/components/App.js"></script>
-	<script type="text/jsx;harmony=true" src="/js/components/Row.js"></script>
-	<script type="text/jsx;harmony=true" src="/js/components/Cell.js"></script>
-	<script type="text/jsx;harmony=true" src="/js/components/Board.js"></script>
+
 </body>
 </html>
