App working by recognising custom tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-	<div id="app"></div>
+	<App></App>
 
 	<script type="text/javascript" src="/js/transpose.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.1/react.js"></script>
