--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript" src="/js/transpose.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.1/react.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.1/JSXTransformer.js"></script>
+	<script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
 
 
     <script type="text/jsx;harmony=true" src="/js/script.js"></script>
